--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,6 @@
     <color name="darkgrey">#909090</color>
     <color name="red">#ff0000</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorDisabled">#928E90</color>
+    <color name="colorBad">#FFEB3B</color>
 </resources>
