--- a/app/src/main/res/layout/activity_app.xml
+++ b/app/src/main/res/layout/activity_app.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/drawerLayout"
@@ -23,15 +24,17 @@
 
                 <com.google.android.material.appbar.MaterialToolbar
                     android:id="@+id/topAppBar"
-                    style="@style/Widget.MaterialComponents.Toolbar"
                     android:layout_width="match_parent"
                     android:layout_height="?attr/actionBarSize"
                     android:background="@color/bottommenubar"
+                    android:elevation="4dp"
                     app:menu="@menu/top_app_bar"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                     app:navigationIcon="@drawable/ic_baseline_menu_24"
                     app:title="@string/page_title"
-                    >
-                </com.google.android.material.appbar.MaterialToolbar>
+                    />
 
             </com.google.android.material.appbar.AppBarLayout>
 
@@ -42,10 +45,11 @@
                 android:name="androidx.navigation.fragment.NavHostFragment"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
+                android:background="@color/bottommenubar"
                 app:defaultNavHost="true"
                 app:navGraph="@navigation/nav_main"
                 app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
-                app:layout_constraintTop_toBottomOf="@id/AppBarLayout"
+                app:layout_constraintTop_toBottomOf="@+id/AppBarLayout"
                 />
 
 
@@ -54,6 +58,8 @@
                 android:id="@+id/bottom_navigation"
                 android:layout_width="match_parent"
                 android:layout_height="55dp"
+                style="@style/Theme.Recipes"
+                android:background="@color/bottommenubar"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:menu="@menu/menu_bottom_bar" />
         </androidx.constraintlayout.widget.ConstraintLayout>
