--- a/app/src/main/res/layout/fragment_start.xml
+++ b/app/src/main/res/layout/fragment_start.xml
@@ -7,15 +7,14 @@
     android:padding="0dp"
     tools:context=".fragment.startFragment">
 
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recipesRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="0dp"
-        tools:listitem="@layout/recipecard"/>
-
+ />
 
     <ImageView
         android:id="@+id/cooking"
@@ -23,7 +22,7 @@
         android:layout_height="match_parent"
         android:contentDescription="@string/cooking"
         android:src="@drawable/cook"
-        android:visibility="gone"
+        android:visibility="visible"
         android:scaleType="fitXY"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="0dp" />
@@ -36,7 +35,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginBottom="10dp"
         android:layout_marginEnd="10dp"
-        app:backgroundTint="@color/colorAccent"
+        android:enabled="false"
+        app:backgroundTint="@color/colorDisabled"
         app:srcCompat="@drawable/ic_round_add_24"
         app:rippleColor="@color/black"
         app:tint="@color/white"
